examples/legacy/invalid_scl/conflicting_constant_decl_type.scl
const V: usize = 5
type r(u32, usize)
rel r = {(V, 3), (3, V)}
